# rviz_satellite

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml  rviz_satellite-extras.cmake  sample.bag  sample.rviz
.github/workflows/: industrial_ci_action.yml  pre-commit.yml
cmake/: FindFreeImage.cmake  FindOGRE.cmake
demo/: demo.launch.xml  demo.rviz  publish_demo_data  publish_demo_data.py
launch/: demo.gps  demo.launch  demo.rviz  demo_utm.launch  demo_utm.rviz  demo_utm_reference.launch  demo_utm_reference.rviz  marker.cfg  publish_demo_data.py  rviz_satellite_offline_cache.launch
src/: Area.h  Coordinates.h  General.h  OgreTile.cpp  OgreTile.h  TileCache.h  TileCacheDelay.h  TileId.cpp  TileId.h  aerialmap_display.cpp  aerialmap_display.h  aerialmap_display.hpp  area.h  area.hpp  coordinates.h  coordinates.hpp  field.cpp  field.hpp  mercator.h  mercator.hpp  ogre_tile.cpp  ogre_tile.h  ogre_tile.hpp  position_reference.h  position_reference_property.cpp  position_reference_property.h  tile.cpp  tile.hpp  tile_cache.h  tile_cache.hpp  tile_cache_delay.h  tile_cache_delay.hpp  tile_client.cpp  tile_client.hpp  tile_downloader.cpp  tile_downloader.hpp  tile_id.cpp  tile_id.h  tile_id.hpp  tile_object.cpp  (+3 more)
src/detail/: ErrorRateManager.h  TileDownloader.h  error_rate_manager.hpp  tile_downloader.h
test/: test_field.cpp
