<?xml version="1.0"?>
<package format="3">
  <name>rviz_satellite</name>
  <version>4.0.0</version>
  <description>Display satellite map tiles in RViz</description>
  <author email="gcross.code@icloud.com">Gareth Cross</author>
  <maintainer email="andre.schroeder@tomtom.com">Andre Schröder</maintainer>
  <maintainer email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>angles</depend>

  <build_depend>qtbase5-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <rviz plugin="plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
