<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_satellite</name>
  <version>4.3.0</version>
  <description>Display satellite map tiles in RViz</description>
  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>

  <license>Apache 2</license>

  <author email="gcross.code@icloud.com">Gareth Cross</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>proj</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>sensor_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <rviz plugin="plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
